<resources>
     <string name="history_price">价格走势</string>
    <string name="go_comments">开启知物</string>
    <string name="personal_center">每日特价</string>
    <string name="app_name">购物大厅</string>
    <string name="tab_title">购物大厅</string>
    <string name="ok">"确定"</string>
    <string name="cancel">"取消"</string>
    <string name="g_message">欢迎使用购物大厅客户端软件，客户端使用完全免费，在使用过程中会产生流量费，流量费请咨询当地运营商，是否允许应用建立连接？</string>
    <string name="g_title">系统提示</string>
    <string name="liuliang_checkbox">不再提示</string>
    <string name="g_checkbox">此版本不再提示</string>
    <string name="g_cancel">退出</string>
    <string name="empty_string">""</string>
    <string name="empty"></string>
    <string name="enter_name">请输入搜索内容</string>
    <string name="no_input">请输入问题或关键字</string>
    <string name="app_search">搜索</string>
    <string name="recommond">推荐</string>
    <string name="pay_on_delivery">货到付款</string>
    <string name="friendly_notify">温馨提示</string>
    <string name="is_exit">再按一次退出应用</string>
    <string name="menu_refresh">刷新</string>
    <string name="menu_check_version">版本升级</string>
    <string name="menu_help">帮助</string>
    <string name="menu_quit">退出</string>
    <string name="upgrade_download_now">立即下载</string>
    <string name="upgrade_donot_download">暂不提示</string>
    <string name="upgrade_upgrade_now">马上更新</string>
    <string name="upgrade_donot_upgrade">暂不更新</string>
    <string name="upgrade_start_download">购物大厅正在下载</string>
    <string name="upgrade_title">购物大厅升级</string>
    <string name="upgrade_download_complete_title">下载完成</string>
    <string name="upgrade_download_complete_message">需要完成更新后才能体验新版本。</string>
    <string name="upgrade_no_display_this_version">本版本不再提示。</string>
    <string name="upgrade_now_version">当前版本：</string>
    <string name="upgrade_new_version">最新版本：</string>
    <string name="upgrade_new_feature_desc">改进信息：</string>
    <string name="upgrade_new_down_desc1">温馨提示：</string>
    <string name="upgrade_new_down_desc2">会保存上一版本的使用记录。</string>
    <string name="upgrade_new_down_desc3">升级使用流量较多，建议使用WLAN。</string>
    <string name="upgrade_file_size">大小</string>
    <string name="upgrade_error_no_enough_space">存储空间不足,请删除部分文件后再试</string>
    <string name="upgrade_error_no_sdcard">SD卡不存在或异常，请确认SD卡存在并读写正常！</string>
    <string name="upgrade_error_network_exception">网络异常，请检查您的网络连接。</string>
    <string name="upgrade_tip">提示</string>
    <string name="upgrade_no_net">网络异常，请检查您的网络连接</string>
    <string name="upgrade_force">该版本只有升级之后才可以使用，如果不升级可能导致客户端不能使用!</string>
    <string name="upgrade_menu_preferences">"请设置网络"</string>
    <string name="upgrade_no_need_update">已经是最新版本！</string>
    <string name="upgrade_error_not_fond_file">未发现可用安装包</string>
    <string name="upgrade_appupgrade_busy">升级正在进行中,请稍后!</string>
    <string name="upgrade_force_mode">强制升级</string>
    <string name="refresh_error">加载失败</string>
    <string name="refresh_timeout">加载超时</string>
    <string name="input_goods_name">请输入商品名</string>
    <string name="last_update_time">最近一次更新 ：</string>
    <string name="common_question">常见问题</string>
    <string name="contact_style">您的联系方式</string>
    <string name="empty_content">发送信息不能为空</string>
    <string name="send_qb_notify">中奖名单将在活动结束后公布于购物大厅QQ群：237057997</string>
    <string name="send_qb_certain">"确    定"</string>
    <string name="please_input_qq">请输入您的手机号</string>
    <string name="send_qb_skip">跳  过</string>
    <string name="get_qb_success">提交成功</string>
    <string name="bargain_price">每日特价</string>
    <string name="sale_price">¥%1$s</string>
    <string name="discount">%1$s折</string>
    <string name="my_attention_title">我的关注（长按可取消关注）</string>
    <string name="add">添加</string>
    <string name="input_favorite_shopping_channel">输入你喜欢的购物频道</string>
    <string name="cancel_add">取消添加</string>
    <string name="no_date">暂无商品</string>
    <string name="no_browse_history">无内容，轻触回大厅</string>
    <string name="no_order_history">无订单记录，轻触回大厅</string>
    <string name="not_known">未知</string>
    <string name="input_search_contents">需要输入搜索内容</string>
    <string name="banner_image_tag">banner_image_tag</string>
    <string name="app_recommond">精品应用</string>
    <string name="feedback">意见反馈</string>
    <string name="scan_text">将二维码放入框内, 即可自动扫描</string>
    <string name="scanner">二维码扫描</string>
    <string name="scan_tips">扫描到一个网址是否打开？</string>
    <string name="scan_failed">此格式暂不支持，敬请期待</string>
    <string name="exit_delayed">再逛逛</string>
    <string name="errcode_success">分享成功</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="share">分享</string>
    <string name="weixin_friends">微信好友</string>
    <string name="weixin_friends_circle">微信朋友圈</string>
    <string name="send_img_file_not_exist">文件不存在</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="share_success">分享成功</string>
    <string name="share_cancel">取消分享</string>
    <string name="share_fail">分享失败</string>
    <string name="share_faild">分享失败，再次分享给你的小伙伴们吧</string>
    <string name="not_install_weixin">您还未安装微信！</string>
    <string name="webpage_exception">页面异常</string>
    <string name="select">筛选</string>
    <string name="immediately_experience">立即体验</string>
    <string name="no_camera_permission">需开启拍摄权限才能扫描</string>
    <string name="home_page">首页</string>
    <string name="sd_not_exist">SD卡不存在</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="scan_download_tips">扫描到一个下载链接是否下载？</string>
    <string name="install">安装</string>
    <string name="app_recommond_title">精品应用</string>
    <string name="app_introduce">应用介绍:</string>
    <string-array name="app_status_array">
        <item>下载</item>
        <item>下载中</item>
        <item>打开</item>
        <item>升级</item>
        <item>安装</item>
        <item>等待中</item>
    </string-array>
    <string name="open_failed">打开失败，请重新安装</string>
    <string name="download_failed">下载失败</string>
    <string name="INSTALL_ERROR">文件已被删除，请重新下载</string>
    <string name="download_apk_error">文件错误，请重新下载</string>
    <string name="camere_start_error">相机调用失败</string>
    <string name="sd_card_no_free">您的内存空间不够</string>
    <string name="re_download">重新下载</string>
    <string name="is_certain_reload">您确定要重新下载吗？</string>
    <string name="loading">加载中...</string>
    <string name="followed_success">已关注成功</string>
    <string name="followed_err">关注异常</string>
    <string name="follow_weibo">关注官方微博</string>
    <string name="like">打分鼓励一下</string>
    <string name="settings">设置</string>
    <string name="share_weixin_friends">分享给微信好友</string>
    <string name="clear_history">清除商品历史搜索</string>
    <string name="clear_history_store">清除店铺历史搜索</string>
    <string name="clear_history_goods_tip">是否清除商品历史搜索？</string>
    <string name="clear_history_store_tip">是否清除店铺历史搜索？</string>
    <string name="share_weixin_description">购物大厅，一款得到千万用户认可，功能强大的导购神器！</string>
    <string name="follow_err">关注失败</string>
    <string name="refocus">重新关注</string>
    <string name="recommond_seleted">小惠精选</string>
    <string name="search_histroy">商品历史搜索</string>
    <string name="search_hot_words">大家都在搜</string>
    <string name="search_histroy_store">店铺历史搜索</string>
    <string name="successfully_added">添加成功</string>
    <string name="anzhi">N08000</string>
    <string name="baidu">N21000,N14000,N07000</string>
    <string name="baidu_only">N21000</string>
    <string name="no_more_msg">没有更多了</string>
    <string name="no_camera_info">无法获取摄像头数据，请重新打开二维码扫描.</string>
    <string name="favorites">收藏</string>
    <string name="favorited">已收藏</string>
    <string name="story">知物</string>
    <string name="all">全部</string>
    <string name="my_favorites">我的收藏</string>
    <string name="comments_advertisement">无内容，轻触去知物</string>
    <string name="have_a_look">去逛逛知物</string>
    <string name="goto_look">去逛逛吧</string>
    <string name="no_comment">轻触屏幕,重新加载</string>
    <string name="me_tab">我的</string>
    <string name="author_said">%1$s说</string>
    <string name="classify">分类</string>
    <string name="service_online">客服小惠在线</string>
    <string name="service_phone">致电客服</string>
    <string name="service_phone_num">0755-82583525</string>
    <string name="about_shoppingmall">关于购物大厅</string>
    <string name="attention_weibo">关注官方微博</string>
    <string name="version_code">版本号：V%1$s</string>
    <string name="praise">赞</string>
    <string name="have_praised">已赞</string>
    <string name="dress">女装</string>
    <string name="delete_story_info">是否删除这条收藏？</string>
    <string name="copy_link">复制链接</string>
    <string name="copy_to_clipboard">成功复制链接</string>
    <string name="comment_detail">知物详情</string>
    <string name="shopping_mall">大厅</string>
    <string name="booting_pls_waiting">启动中，请稍候</string>
    <string name="dial_to_service">是否拨打客服电话</string>
    <string name="goods">商品</string>
    <string name="shop">店铺</string>
    <string name="webpage">网页</string>
    <string name="no_goods">无内容，轻触回大厅</string>
    <string name="no_shop">无内容，轻触回大厅</string>
    <string name="no_webpage">无内容，轻触回大厅</string>
    <string name="browse_history">历史浏览及订单</string>
    <string name="clear">清空</string>
    <string name="logistics_query">物流查询</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="yesterday">昨天</string>
    <string name="clear_goods">是否清空商品浏览记录？</string>
    <string name="clear_shops">是否清空店铺浏览记录？</string>
    <string name="clear_alls">是否清空全部记录？</string>
    <string name="favorite_success">收藏成功</string>
    <string name="favorite_err">收藏失败,请重试</string>
    <string name="platform_goods">%1$s商品</string>
    <string name="publish_comment">说两句吧</string>
    <string name="nick_name">昵称</string>
    <string name="send">发送</string>
    <string name="please_say_more">请再说两句吧</string>
    <string name="shopping_help_off">关闭后&#160;,&#160;在淘宝等页面浏览时将不显示购物教程按钮&#160;,&#160;购物教程按钮可帮您解答购物中登录&#160;,&#160;支付等疑问</string>
    <string name="shopping_help_open">开启后&#160;,&#160;在淘宝等页面浏览时将显示购物教程按钮&#160;,&#160;购物教程按钮可帮您解答购物中登录&#160;,&#160;支付等疑问</string>
    <string name="clean_cache">清除缓存</string>
    <string name="shopping_help_btn">购物教程按钮</string>
    <string name="clean_success">清除成功!</string>
    <string name="certain_clean_cache">是否清空缓存数据</string>
    <string name="newest">最新:</string>
    <string name="install_tip">点击安装最新版本</string>
    <string name="check_close_course_tips">勾选后，右下角将不再显示购物教程按钮。你可在“我的-设置”里重新打开。</string>
    <string name="net_friends">网友</string>
    <string name="exceed_max_size">达到字数上限</string>
    <string name="story_discuss">知物评论</string>
    <string name="other_erea">其它地区</string>
    <string name="send_success">发送成功！</string>
    <string name="send_failed">发送失败！请重试</string>
    <string name="sending_pls_wait">评论发送中，请稍等</string>
    <string name="no_discuss_data">暂无评论</string>
    <string name="app_name_cn">购物大厅</string>
    <string name="just_a_moment">刚刚</string>
    <string name="is_newest_version">当前已是最新版本</string>
    <string name="check_version_ing">版本检测中...</string>
    <string name="loading_share_later">加载中，请稍候分享</string>
    <string name="click_see_more">点击评论查看更多</string>
    <string name="my_bargain_order">我的活动记录</string>
    <string name="cut_area">砍价专区</string>
    <string name="delete">删除</string>
    <string name="month_sale">月售:</string>
    <string name="score">暂无评价</string>
    <string name="no_more_best">没有找到更好的同款哦~</string>
    <string name="camera">相机</string>
    <string name="gallery">图库</string>
    <string name="classify_search">分类</string>
    <string name="no_related_question">没有相关问题，您可以第一个提出来</string>
    <string name="go_to_ask_question">去提问</string>
    <string name="pls_input_keyword">请输入问题或关键字</string>
</resources>