<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/return_bg"
    android:descendantFocusability="blocksDescendants"
    android:paddingBottom="16dp"
    android:paddingLeft="3dp"
    android:paddingTop="16dp" >

    <ImageView
        android:id="@+id/channel_icon"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="7dp"
        android:contentDescription="@string/empty"
        android:scaleType="fitXY" />

    <LinearLayout
        android:id="@+id/add_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_toLeftOf="@+id/add_button"
        android:layout_toRightOf="@+id/channel_icon"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/channel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="#444444"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/channel_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:ellipsize="end"
            android:lineSpacingExtra="2dip"
            android:maxLines="2"
            android:textColor="#b7b7b7"
            android:textSize="13sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="8dp" >

        <Button
            android:id="@+id/add_channel"
            android:layout_width="70dip"
            android:layout_height="30dp"
            android:background="@drawable/attention_add_src"
            android:drawableLeft="@drawable/add_bt_src"
            android:drawablePadding="4dp"
            android:gravity="center_vertical"
            android:paddingLeft="12dp"
            android:text="@string/add"
            android:textColor="@drawable/add_text_color"
            android:textSize="14dp" />

        <Button
            android:id="@+id/cancel_add"
            android:layout_width="70dip"
            android:layout_height="30dp"
            android:background="@drawable/attention_add_src"
            android:gravity="center"
            android:text="@string/cancel_add"
            android:textColor="@color/add_attention_text"
            android:textSize="14dp"
            android:visibility="gone" />
    </FrameLayout>

    <TextView
        android:id="@+id/successfully_added"
        android:layout_width="62dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="26dp"
        android:layout_marginRight="3dp"
        android:text="@string/successfully_added"
        android:textColor="@color/add_text_color"
        android:textSize="13dp"
        android:visibility="gone" />

</RelativeLayout>