<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/current_style_layout"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="#fbfbfb" >

        <ImageView
            android:id="@+id/thumb"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:contentDescription="@null"
            android:src="@drawable/comment_img_default" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/thumb"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="6dp"
            android:layout_toLeftOf="@+id/price"
            android:layout_toRightOf="@id/thumb"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/about_shoppingmall"
            android:textColor="#666666"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/thumb"
            android:layout_marginRight="8dp"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/about_shoppingmall"
            android:textColor="#ff6633"
            android:textSize="17dp" />

        <TextView
            android:id="@+id/month_sale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/thumb"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="12dp"
            android:layout_toRightOf="@id/thumb"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/month_sale"
            android:textColor="#888888"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/sales_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/thumb"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/month_sale"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/ok"
            android:textColor="#888888"
            android:textSize="13dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/score_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/thumb"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="14dp"
            android:layout_toRightOf="@id/sales_volume"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/score"
            android:textColor="#888888"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/express_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/thumb"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="8dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/ok"
            android:textColor="#888888"
            android:textSize="13dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/goods_contrast_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/current_style_layout"
        android:background="@drawable/comment_list_divider"
        android:orientation="vertical"
        android:overScrollMode="always" >

        <com.gionee.client.view.widget.PullToRefreshListView
            android:id="@+id/recommend_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:cacheColorHint="@color/transparent"
            android:divider="#dadada"
            android:dividerHeight="1px"
            android:fadingEdge="none"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:stretchMode="columnWidth" />

        <ViewStub
            android:id="@+id/no_data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout="@layout/no_date_layout" />

        <ProgressBar
            android:id="@+id/loading_bar"
            style="@style/newProgressStyle"
            android:layout_centerInParent="true"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/go_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="18dp"
            android:layout_marginRight="12dp"
            android:contentDescription="@null"
            android:src="@drawable/go_top_img"
            android:visibility="gone" />

        <TextView
            android:id="@+id/no_more_best"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="60dip"
            android:gravity="center_horizontal"
            android:padding="10dip"
            android:text="@string/no_more_best"
            android:textColor="#afafaf"
            android:textSize="15dip"
            android:visibility="gone" >
        </TextView>
    </RelativeLayout>

</RelativeLayout>